syntax = "proto3";

package dhpcs.liquidity.actor.protocol.clientmonitor;

option java_package = "com.dhpcs.liquidity.proto.actor.protocol.clientmonitor";

message ActiveClientSummary {
    bytes remote_address = 1;
    bytes public_key = 2;
}

message UpsertActiveClientSummary {
    string client_connection = 1;
    ActiveClientSummary active_client_summary = 2;
}
